Adding coef plots

--- a/analysis/Passby_MANOVA_Analyses.html
+++ b/analysis/Passby_MANOVA_Analyses.html
@@ -1604,7 +1604,7 @@ SD_pavetemp
 2016
 </td>
 <td style="text-align:left;">
-X3.8in.Chip.Seal
+baseline_chipseal
 </td>
 <td style="text-align:right;">
 95
@@ -1846,13 +1846,13 @@ X3.8in.Chip.Seal
 ## Residuals       176                                           
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
-<pre><code>##                 Df  Pillai approx F num Df den Df  Pr(&gt;F)    
-## treatment        3 2.32697   20.346     78    459 &lt; 2e-16 ***
-## pavetemp         1 0.93315   81.074     26    151 &lt; 2e-16 ***
-## speed            1 0.73515   16.120     26    151 &lt; 2e-16 ***
-## Site             2 1.31590   11.245     52    304 &lt; 2e-16 ***
-## pavetemp:speed   1 0.23206    1.755     26    151 0.01967 *  
-## Residuals      176                                           
+<pre><code>##                 Df  Pillai approx F num Df den Df    Pr(&gt;F)    
+## treatment        4 2.87441  15.1256    104    616 &lt; 2.2e-16 ***
+## pavetemp         1 0.31227   2.6370     26    151 0.0001301 ***
+## speed            1 0.68669  12.7289     26    151 &lt; 2.2e-16 ***
+## Site             1 0.57224   7.7693     26    151 &lt; 2.2e-16 ***
+## pavetemp:speed   1 0.23206   1.7550     26    151 0.0196730 *  
+## Residuals      176                                             
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 <table class="table table-striped table-hover" style="margin-left: auto; margin-right: auto;">
@@ -2787,10 +2787,10 @@ pavetemp:speed
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 <pre><code>##            Df  Pillai approx F num Df den Df    Pr(&gt;F)    
-## treatment   3 2.27988   18.752     78    462 &lt; 2.2e-16 ***
-## pavetemp    1 0.91393   62.078     26    152 &lt; 2.2e-16 ***
-## speed       1 0.73013   15.817     26    152 &lt; 2.2e-16 ***
-## Site        2 1.29154   10.728     52    306 &lt; 2.2e-16 ***
+## treatment   4 2.80901  14.0605    104    620 &lt; 2.2e-16 ***
+## pavetemp    1 0.29938   2.4981     26    152 0.0002947 ***
+## speed       1 0.68576  12.7582     26    152 &lt; 2.2e-16 ***
+## Site        1 0.57369   7.8673     26    152 &lt; 2.2e-16 ***
 ## Residuals 177                                             
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
